fix: :memo: Add the new files
Add the new files for run in railway

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,12 @@
 [phases.setup]
 cmds = [
-   "apt-get update -y",                     
-    "apt-get install -y build-essential perl", 
-    "cpan HTTP::Server::Brick"   
+    "apt-get update -y",                      
+    "apt-get install -y build-essential perl",  
+    "cpan HTTP::Server::Simple::CGI"         
 ]
 
 [phases.build]
 cmds = []
 
 [phases.start]
-cmd = "perl -MHTTP::Server::Brick -e 'HTTP::Server::Brick->new(port => $PORT)->mount(\"/\" => {path => \"index.pl\"})->start'"
+cmd = "perl app.pl" 
